# KeroMaster

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  run.sh
.github/workflows/: artifacts.yml  nightly.yml
art/: icon.aseprite
art/mac-icon.icon/: icon.json
include/: CMakeLists.txt  Makefile
include/imgui/examples/: imgui_impl_opengl3.cpp
object_data/: all.xml  alwaysLoaded.txt  scriptInfo.xml  unittype.txt
object_data/themes/: Cat & Frog.ini  ImGui Classic.ini  ImGui Dark.ini  ImGui Light.ini  Purple Power.ini
res/macos/: Info.plist  mac-icon.icns
src/: main.cpp  platform.cpp  platform.h  platform.mm  types.h
src/bgm/: bgm.cpp  bgm.h
src/bgm/pxtone/: pxtnService.cpp  pxtnWoicePTV.cpp
src/conv/: conv.cpp  conv.h  jisConvData.h
src/ed/: attributeEditor.cpp  attributeEditor.h  editor.cpp  editor.h  editorNew.cpp  editorNew.h  entityDisplay.cpp  entityDisplay.h  entityEditor.cpp  entityEditor.h  help.cpp  help.h  imageViewer.cpp  imageViewer.h  inicpp.h  levelEditor.cpp  levelEditor.h  musicPlayer.cpp  musicPlayer.h  palette.cpp  palette.h  profileEditor.cpp  profileEditor.h  scriptEditor.cpp  scriptEditor.h  selection.cpp  selection.h  settings.cpp  settings.h  settingsNew.cpp  settingsNew.h  style.cpp  style.h  styleEditor.cpp  styleEditor.h  tilesetEditor.cpp  tilesetEditor.h  toolbar.cpp  toolbar.h  undoStack.cpp  (+1 more)
src/ed/themes/: CatAndFrog.h  PurplePower.h
src/ed/tools/: entityHand.cpp  entityHand.h  eraser.cpp  eraser.h  hand.cpp  hand.h  tileBrush.cpp  tileBrush.h  tool.cpp  tool.h  tools.cpp  tools.h  zoom.cpp  zoom.h
src/gbin/: gblocks.h  gfile.cpp  gfile.h  gtypes.cpp  gtypes.h
src/px/: profile.cpp  profile.h  pxmap.cpp  pxmap.h  str.cpp  str.h  tileset.cpp  tileset.h
src/rlImGui/: dateChooser.cpp  dateChooser.h  fileBrowser.cpp  fileBrowser.h  focusData.cpp  focusData.h  jfDotFont.h  rlImGui.cpp  rlImGui.h  utils.cpp  utils.h
tools/: ini2style.py
